# definabilitychecker

./: .gitmodules  CMakeLists.txt
cadical_ipasir/: CMakeLists.txt  cadical.h
include/: definabilitychecker.h  utils.h
src/: definabilitychecker.cc  definabilitychecker.h
